[gd_scene load_steps=2 format=3 uid="uid://hsn0vxf4utf4"]

[ext_resource type="Script" uid="uid://ds0txknyvbcjl" path="res://ui/hub/OptionsWindow.gd" id="1"]

[node name="OptionsWindow" type="AcceptDialog"]
title = "Opciones"
size = Vector2i(256, 115)
visible = true
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.942
anchor_bottom = 1.457
offset_left = 8.0
offset_top = 8.0
offset_right = -249.152
offset_bottom = -131.555
grow_horizontal = 2
grow_vertical = 2

[node name="hbox_volume" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LabelVolume" type="Label" parent="VBox/hbox_volume"]
layout_mode = 2
text = "Volumen:"

[node name="SliderVolume" type="HSlider" parent="VBox/hbox_volume"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 24.0
